--- a/Calender/templates/diary.html
+++ b/Calender/templates/diary.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>{{time}} 의 일기</h1>
-    <form method="POST">{% csrf_token %}
-        {{form.as_p}}
-        <input type="hidden" name="date" value="{{time}}">
-        <button type="submit">Save</button>
-    </form>
+    <h1>{{date.year}}년 {{date.month}}월 {{date.day}} 의 일기</h1>
+    <a href="/diary_detail/?date={{date.year}}-{{date.month}}-{{date.day}}">등록</a>
+        {% for diary in diary_list %}
+            <h2>{{diary.title}}</h2>
+            <div>{{diary.text}}</div>
+        {% endfor %}
 </body>
 </html>
